feat(auth): add NextAuth

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,14 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# terraform
+# # Local .terraform directories
+**/.terraform/*
+
+# .tfstate files
+*.tfstate
+*.tfstate.*
+.terraformrc
+terraform.rc
+terraform.tfvars
