--- a/package.json
+++ b/package.json
@@ -6,10 +6,17 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "codegen": "graphql-codegen"
   },
   "dependencies": {
+    "@apollo/client": "^3.13.8",
     "@aws-sdk/client-cognito-identity-provider": "^3.848.0",
+    "@graphql-tools/load-files": "^7.0.1",
+    "@graphql-tools/schema": "^10.0.24",
+    "@prisma/client": "^6.12.0",
+    "graphql": "^16.11.0",
+    "graphql-yoga": "^5.15.1",
     "next": "15.4.2",
     "next-auth": "^4.24.11",
     "react": "19.1.0",
@@ -23,6 +30,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.4.2",
     "eslint-plugin-import": "^2.32.0",
-    "typescript": "^5"
+    "prisma": "^6.12.0",
+    "typescript": "5.8.3"
   }
 }
