--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "codegen": "graphql-codegen"
+    "lint:fix": "eslint --config eslint.config.mjs './src/**/*.{js,jsx,ts,tsx}' --fix --ignore-pattern 'src/generated/**'",
+    "codegen": "graphql-codegen",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@apollo/client": "^3.13.8",
@@ -20,17 +23,39 @@
     "next": "15.4.2",
     "next-auth": "^4.24.11",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "styled-components": "^6.1.19"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
+    "@chromatic-com/storybook": "^4.0.1",
+    "@eslint/eslintrc": "^3.3.1",
+    "@storybook/addon-a11y": "^9.0.18",
+    "@storybook/addon-docs": "^9.0.18",
+    "@storybook/addon-onboarding": "^9.0.18",
+    "@storybook/addon-themes": "^9.0.18",
+    "@storybook/addon-vitest": "^9.0.18",
+    "@storybook/builder-vite": "^9.0.18",
+    "@storybook/nextjs-vite": "^9.0.18",
+    "@storybook/react": "^9.0.18",
+    "@storybook/react-vite": "^9.0.18",
+    "@types/node": "^24.1.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9",
+    "@types/styled-components": "^5.1.34",
+    "@vitest/browser": "^3.2.4",
+    "@vitest/coverage-v8": "^3.2.4",
+    "eslint": "^9.32.0",
     "eslint-config-next": "15.4.2",
+    "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-prettier": "^5.5.3",
+    "eslint-plugin-storybook": "^9.0.18",
+    "playwright": "^1.54.1",
+    "prettier": "^3.6.2",
     "prisma": "^6.12.0",
-    "typescript": "5.8.3"
+    "storybook": "^9.0.18",
+    "typescript": "^5.8.3",
+    "vite": "^7.0.6",
+    "vitest": "^3.2.4"
   }
 }
