--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
-    "types": ["next-auth"],
+    "types": ["next-auth", "styled-components"],
     "paths": {
       "@/*": ["./src/*"]
     },
@@ -24,7 +24,8 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "src/types/next-auth.d.ts"
+    "src/types/next-auth.d.ts",
+    "src/styles/styled.d.ts"
   ],
   "exclude": ["node_modules"]
 }
