--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@storybook/nextjs-vite": "^9.0.18",
     "@storybook/react": "^9.0.18",
     "@storybook/react-vite": "^9.0.18",
+    "@storybook/test": "^8.6.14",
     "@types/node": "^24.1.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -52,6 +53,7 @@
     "eslint-plugin-storybook": "^9.0.18",
     "playwright": "^1.54.1",
     "prettier": "^3.6.2",
+    "prettier-plugin-embed": "^0.5.0",
     "prisma": "^6.12.0",
     "storybook": "^9.0.18",
     "typescript": "^5.8.3",
